# stresspose-analysis-auto

./: .gitignore  CITATION.cff  LICENSE  README.md  _tasks.py  pyproject.toml  ruff.toml
.github/workflows/: publish.yml  test-and-lint.yml
experiments/2023_02_stress_pose_imwut/feature_export/motion_features/: motion_features.csv  motion_features_for_classification.csv
experiments/2023_02_stress_pose_imwut/notebooks/classification/: Analysis_Classification_General.ipynb  Classification_General.ipynb
experiments/2023_02_stress_pose_imwut/notebooks/data_processing/: Motion_Data_Feature_Extraction.ipynb  Questionnaire_Processing.ipynb  Saliva_Processing.ipynb
experiments/2023_02_stress_pose_imwut/notebooks/motion_features/: Motion_Feature_Analysis.ipynb  Motion_Feature_Overview.ipynb
experiments/2023_02_stress_pose_imwut/results/: descriptive_information_saliva.xlsx
experiments/2023_05_stress_pose_scientific_reports/results/: descriptive_information_saliva.xlsx  overview_features.xlsx  overview_significant_features.xlsx
experiments/mainstudy/notebooks/biomarker/: Saliva_Processing.ipynb
experiments/mainstudy/results/: demographics.xlsx  descriptive_information_saliva.xlsx  overview_features.xlsx
experiments/pilotstudy/results/: demographics.xlsx  overview_significant_features.xlsx
stresspose_analysis/: __init__.py
stresspose_analysis/classification/: __init__.py  utils.py
stresspose_analysis/classification/hyperparameter_search/: __init__.py  _hyperparameter_search.py  mainstudy.py  pilotstudy.py
stresspose_analysis/data_processing/: __init__.py  perception_neuron.py
stresspose_analysis/data_wrangling/: __init__.py  _data_wrangling.py
stresspose_analysis/dataset/: __init__.py  _dataset.py
stresspose_analysis/datasets/: __init__.py
stresspose_analysis/datasets/mainstudy/: __init__.py  _base_dataset.py  _dataset.py  _dataset_per_phase.py  _helper.py
stresspose_analysis/datasets/pilotstudy/: __init__.py  _dataset.py  _helper.py
stresspose_analysis/feature_extraction/: __init__.py  utils.py
stresspose_analysis/plotting/: __init__.py  _plotting.py
stresspose_analysis/plotting/mainstudy/: __init__.py  _plotting.py
stresspose_analysis/plotting/pilotstudy/: __init__.py  _plotting.py
(+82 files in other folders)
